--- a/logo.html
+++ b/logo.html
@@ -1,1 +1,6 @@
-
+<body>
+    <div class="uno"></div>
+    <div class="dos"></div>
+    <div class="tres"></div>
+    <div class="cuatro"></div>
+</body>
